my-app/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-nginx
  namespace: gmjeong
spec:
  rules:
  - host: prod-nginx.gmjeong.com
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - prod-nginx.gmjeong.com
    secretName: gmjeong-secret
